--- a/TranspoLink/Views/Shared/_Layout.cshtml
+++ b/TranspoLink/Views/Shared/_Layout.cshtml
@@ -120,12 +120,14 @@
                 </li>
 
                 <li><a href="/Home/Reports">📊 Reports</a></li>
+                <li><a href="/Home/AboutUs">About Us</a></li>
             }
             else if (User.IsInRole("Member"))
             {
                 <li><a href="/">Home</a></li>
                 <li><a href="/#features">Features</a></li>
                 <li><a href="/#trending">News & Offers</a></li>
+                <li><a href="/Home/AboutUs">About Us</a></li>
             }
             else
             {
