--- a/TranspoLink/Views/Account/ResetPassword.cshtml
+++ b/TranspoLink/Views/Account/ResetPassword.cshtml
@@ -4,7 +4,8 @@
 }
 
 @section head {
-    <link rel="stylesheet" href="/css/forgotpass.css" />
+    <link rel="stylesheet" href="/css/forgotpass.css" asp-append-version="true" />
+    <script src="/js/regNlog.js" asp-append-version="true" defer></script>
 }
 
 <div class="auth-container">
@@ -12,17 +13,26 @@
         <h2>Reset Password</h2>
         <p>Please create a new, strong password for your account.</p>
 
-        <!-- Display Account Info -->
         <div class="account-display">
             Account: @ViewBag.Target
         </div>
 
-        <form method="post">
+        <form method="post" class="auth-form">
             <div asp-validation-summary="ModelOnly" class="validation-summary-errors"></div>
 
             <div class="auth-input-group">
                 <span class="auth-input-icon">🔑</span>
-                <input asp-for="NewPassword" type="password" placeholder="New Password" autofocus>
+
+                <input asp-for="NewPassword" type="password" placeholder="New Password" id="resetPassInput" autofocus>
+
+                <div class="password-requirements-popup">
+                    <p>Password must contain:</p>
+                    <div class="req-item invalid req-letter"><span class="req-icon">✖</span> At least one letter</div>
+                    <div class="req-item invalid req-capital"><span class="req-icon">✖</span> At least one capital letter</div>
+                    <div class="req-item invalid req-number"><span class="req-icon">✖</span> At least one number</div>
+                    <div class="req-item invalid req-symbol"><span class="req-icon">✖</span> At least one symbol</div>
+                    <div class="req-item invalid req-length"><span class="req-icon">✖</span> Be at least 8 characters</div>
+                </div>
             </div>
             <span asp-validation-for="NewPassword" class="field-validation-error"></span>
 
