--- a/TranspoLink/Views/Account/UpdatePassword.cshtml
+++ b/TranspoLink/Views/Account/UpdatePassword.cshtml
@@ -5,7 +5,8 @@
 }
 
 @section head {
-    <link rel="stylesheet" href="/css/forgotpass.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="/css/forgotpass.css" asp-append-version="true" />
+    <script src="/js/regNlog.js" asp-append-version="true" defer></script>
 }
 
 <div class="auth-container">
@@ -22,9 +23,19 @@
             </div>
             <span asp-validation-for="Current" class="field-validation-error"></span>
 
-            <div style="margin-top: 15px;" class="auth-input-group">
+            <div class="auth-input-group">
                 <span class="auth-input-icon">🔑</span>
-                <input asp-for="New" type="password" placeholder="New Password">
+
+                <input asp-for="New" type="password" placeholder="New Password" id="updatePassInput">
+
+                <div class="password-requirements-popup">
+                    <p>Password must contain:</p>
+                    <div class="req-item invalid req-letter"><span class="req-icon">✖</span> At least one letter</div>
+                    <div class="req-item invalid req-capital"><span class="req-icon">✖</span> At least one capital letter</div>
+                    <div class="req-item invalid req-number"><span class="req-icon">✖</span> At least one number</div>
+                    <div class="req-item invalid req-symbol"><span class="req-icon">✖</span> At least one symbol</div>
+                    <div class="req-item invalid req-length"><span class="req-icon">✖</span> Be at least 8 characters</div>
+                </div>
             </div>
             <span asp-validation-for="New" class="field-validation-error"></span>
 
@@ -36,9 +47,7 @@
 
             <button type="submit" class="auth-submit-btn">Update Password</button>
 
-            <div style="margin-top: 20px;">
-                <a href="/Account/ProfileManage" class="auth-link">Cancel & Go Back</a>
-            </div>
+            <a href="/Account/ProfileManage" class="auth-link">Cancel & Go Back</a>
         </form>
     </div>
 </div>
