--- a/TranspoLink/Views/Account/ForgotPassword.cshtml
+++ b/TranspoLink/Views/Account/ForgotPassword.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section head {
-    <link rel="stylesheet" href="/css/forgotpass.css" />
+    <link rel="stylesheet" href="/css/forgotpass.css" asp-append-version="true"/>
 }
 
 <div class="auth-container">
